# Butterfly-Radio

./: .gitignore  Butterfly Radio 本地私有化AI电台 全栈开发与部署文档.md  CLAUDE.md  README.md  frontPrompt.md  package.json  启动指南.md
electron-main/: package-lock.json  package.json  tsconfig.json
electron-main/src/: global.d.ts  main.ts  preload.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  env.d.ts  main.tsx
frontend/src/components/: AiCommentBubble.tsx  AlbumCover.tsx  ChatPanel.tsx  InteractionBar.tsx  LoadingScreen.tsx  MainContent.tsx  MiniPlayer.tsx  Navbar.tsx  PlaybackControls.tsx  QueuePanel.tsx  SettingsPanel.tsx  SongInfo.tsx  SpectrumVisualizer.tsx
frontend/src/hooks/: useBeat.ts  useClock.ts  useKeyboard.ts
frontend/src/lib/: api.ts  electron.ts  utils.ts
frontend/src/player/: index.ts
frontend/src/socket/: index.ts
frontend/src/store/: index.ts
python-backend/: .env.example  app.py  butterfly-radio-backend.spec  main.py  pyproject.toml  requirements.txt
python-backend/ai/: content_safety.py  host_engine.py  llm_engine.py  tts_engine.py
python-backend/api/: __init__.py  ai_control.py  config.py  interaction.py  live.py  media.py  playlist.py  schemas.py  user.py
python-backend/core/: audio_engine.py  broadcast_scheduler.py  playlist_arranger.py  realtime_comm.py
python-backend/db/: __init__.py  dao.py  database.py  models.py
python-backend/service/: artist_photo.py  interaction_service.py  music_search.py  playlist_service.py
(+1 files in other folders)
