[project]
name = "butterfly-radio-backend"
version = "0.1.0"
description = "Butterfly Radio - Local AI Radio Backend"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
